<?xml version="1.0" encoding="utf-8"?>
<!-- Made by Soaiba -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FB9365"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!-- Event Name -->
    <TextView
        android:id="@+id/event_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Event Details -->
    <LinearLayout
        android:id="@+id/event_details_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/event_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/date_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="24sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/time_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="24sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="24sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/organizer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/organizer"
            android:textColor="#000000"
            android:textSize="24sp" />

        <!-- Organizer Image -->
    </LinearLayout>

    <!-- Join Waiting List Button -->
    <Button
        android:id="@+id/join_waitlist_button"
        style="@style/landing_button_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/landing_button"
        android:text="@string/join_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="380dp"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>
