<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landing_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <include
        android:id="@+id/topToolbar"
        layout="@layout/user_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- My Events Button -->
    <Button
        android:id="@+id/my_events_button"
        style="@style/landing_button_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/landing_button"
        android:text="@string/my_events_button_text"
        app:layout_constraintBottom_toTopOf="@+id/scan_qr_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar" />

    <!-- Scan QR Code Button -->
    <Button
        android:id="@+id/scan_qr_button"
        style="@style/landing_button_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/landing_button"
        android:text="@string/scan_qr_code_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar" />

    <!-- Organizer Events Button -->
    <Button
        android:id="@+id/organizer_events_button"
        style="@style/landing_button_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/landing_button"
        android:backgroundTint="#5BC7C4"
        android:text="@string/organizer_events_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_qr_button" />


</androidx.constraintlayout.widget.ConstraintLayout>