<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_events_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:background="#FDB290"
        app:layout_constraintBottom_toTopOf="@+id/topToolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FB9365"

        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_bar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <!-- Notification Bell -->
        <ImageButton
            android:id="@+id/bell"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:contentDescription="@string/bell_icon_description"
            android:background="@drawable/bell_icon" />

        <!-- App Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name_text"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="8dp" />

        <!-- Profile Button -->
        <ImageButton
            android:id="@+id/profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:contentDescription="@string/person_icon_description"
            android:background="@drawable/person_icon" />

    </androidx.appcompat.widget.Toolbar>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:divider="#FB9365"
        android:showDividers="middle"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@id/topToolbar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:padding="16dp"
                android:text="Event 1"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="Jan 1"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="Chosen"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:padding="16dp"
                android:text="Event 2"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="Sep 20"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="Waiting"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:padding="16dp"
                android:text="Event 3"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="May 17"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="Accepted"
                android:textColor="#000000" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/back_button_bottom"
        style="@style/landing_button_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/landing_button"
        android:text="@string/back_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>